# TPSpring_2025_ML_

./: encode.txt  input.txt  tests
Module1/: task2_3.cpp  task3_2.cpp
Module1/BoundaryControll/: Task1.cpp  Task2.cpp  Task3.cpp
Module1/Task1/: task1_1.cpp
Module1/Task2/: task2_3var2.cpp
Module1/Task3/: DequeFinal.cpp  DequeInArray.cpp  task3_2.cpp
Module1/Task4/: HeaoFirst.cpp  HeapFinal.cpp
Module1/Task5/: MergeSort.cpp
Module1/Task6/: Statistics.cpp
Module1/Task7/: RadixSort.cpp
Module2/BoundaryControl/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
Module2/Task1/: HashFirst.cpp
Module2/Task2/: BinaryTree.cpp
Module2/Task3/: BTree.cpp
Module2/Task4/: AvlTree.cpp
Module2/Task5/: CMakeLists.txt  input_decode.txt  output_decode.txt  output_final.txt
Module2/Task5/include/: BitReader.hpp  BitWriter.hpp  CharCounting.hpp  HaffmanEncAndDec.hpp  HaffmanTree.hpp  interface.hpp
Module2/Task5/src/: FinalVersion.cpp  Haffman.cpp  visual_worl.cpp
Module2/Task5/test/: test_HaffmanTree.cpp  test_binarytree.cpp  test_bitwriter.cpp  test_charCounting.cpp
Module3/: formatter.sh
Module3/Task1/: CMakeLists.txt
Module3/Task1/include/: ArcGraph.hpp  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.hpp
Module3/Task1/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  main.cpp
Module3/Task2/: MinimimPath.cpp
Module3/Task4/: GameState.cpp
